# PaddleOCR

./: pyproject.toml
benchmark/: analysis.py
deploy/avh/: convert_image.py
mcp_server/paddleocr_mcp/: __main__.py
paddleocr/_api_client/: _async_http.py
paddleocr/_utils/: deprecation.py
ppocr/data/: latexocr_dataset.py  multi_scale_sampler.py  pubtab_dataset.py
ppocr/losses/: basic_loss.py  center_loss.py  combined_loss.py  det_basic_loss.py  det_pse_loss.py  distillation_loss.py  rec_enhanced_ctc_loss.py  rec_latexocr_loss.py  rec_multi_loss.py  rec_rfl_loss.py  rec_unimernet_loss.py  stroke_focus_loss.py  table_master_loss.py  vqa_token_layoutlm_loss.py
ppocr/metrics/: ct_metric.py  distillation_metric.py  kie_metric.py  table_metric.py  vqa_token_re_metric.py  vqa_token_ser_metric.py
ppocr/postprocess/: ct_postprocess.py  east_postprocess.py  sast_postprocess.py
ppocr/utils/: export_model.py  network.py  utility.py
ppstructure/: predict_system.py  utility.py
ppstructure/kie/: predict_kie_token_ser_re.py
ppstructure/layout/: predict_layout.py
ppstructure/pdf2word/: pdf2word.py
ppstructure/recovery/: recovery_to_doc.py
ppstructure/table/: eval_table.py  table_master_match.py
test_tipc/supplementary/: config.py  data.py  data_loader.py  mv3.py  optimizer.py  train.py
tests/api_client/: test_http.py  (+1 more)
tools/: export_center.py  export_model.py  infer_e2e.py  infer_kie_token_ser.py  infer_kie_token_ser_re.py  infer_sr.py  infer_table.py  naive_sync_bn.py  program.py  test_hubserving.py  train.py
traineer/: __init__.py  paddleocr_tuner.py
(+108 files in other folders)
