[project]
name = "paddleocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albucore>=0.0.24",
    "albumentations>=2.0.8",
    "cython>=3.2.6",
    "lmdb<1.5 ; python_full_version < '3.9'",
    "lmdb>=2.2.1 ; python_full_version >= '3.9'",
    "numpy>=2.5.0",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "packaging>=26.2",
    "paddlepaddle>=3.3.1",
    "pillow>=12.2.0",
    "pyclipper>=1.4.0",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "scikit-image>=0.26.0",
    "shapely>=2.1.2",
    "tqdm>=4.68.3",
]
